@@ -3,6 +3,10 @@
   <groupId>OrangeCRM</groupId>
   <artifactId>OrangeCRM</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+   <properties>
+  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  <aspectj.version>1.8.10</aspectj.version>
+  </properties>
   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependencies>
 <dependency>
@@ -21,5 +25,64 @@
     <artifactId>webdrivermanager</artifactId>
     <version>4.2.2</version>
 </dependency>  
+<dependency>
+     <groupId>io.qameta.allure</groupId>
+     <artifactId>allure-testng</artifactId>
+     <version>2.12.0</version>
+</dependency>
+ <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
 </dependencies>
-</project>
+<build>
+    <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20</version>
+                <configuration>
+                <forkCount>3</forkCount>
+                <reuseForks>true</reuseForks>
+                <argLine>-Xmx1024 -XX:MaxPermSize=256m</argLine>
+                 <suiteXmlFiles>
+                        <suiteXmlFile>src/main/resources/testng_Sanity.xml/</suiteXmlFile>
+                    </suiteXmlFiles>
+                 <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                  </argLine>
+                 </configuration>
+                  </plugin>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <executions>
+            <execution>
+            <id>attach-sources</id>
+            <goals>
+            <goal>jar</goal>
+            </goals>
+            </execution>
+            </executions>
+            </plugin>        </plugins>
+            <resources>
+        <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        </resource>
+        </resources>
+       </build>
+    
+    </project>
+
+
